<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/backgroundairplane">

    <TextView
        android:id="@+id/titlesing_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/jua"

        android:text="@string/registertittle"
        android:textColor="@color/negro"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="595dp"

        app:layout_constraintBottom_toTopOf="@+id/btn_register_r"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlesing_up">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="@string/name"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:errorEnabled="true"
                app:hintEnabled="false"
                android:textColorHint="@color/material_dynamic_neutral80"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="@string/addname"
                    android:inputType="text"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="@string/lastname"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="@string/addlastname"
                    android:inputType="text"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="@string/email"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldemailadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="@string/addemail"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtpassadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="@string/pass"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldpassAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="@string/addpass"
                    android:inputType="textPassword"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtpassadd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="@string/pass2"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldpassAdd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="@string/pass2"
                    android:inputType="textPassword"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_register_r"
        style="@style/boton_celeste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/addaccount"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_register_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/jua"
        android:text="@string/backtologin"
        android:textColor="@color/celesteoscuro"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>